--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "nightingale-backend",
   "description": "Cloud Function for Firebase",
   "scripts": {
+    "lint": "eslint .",
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -12,6 +13,10 @@
     "firebase-admin": "~8.8.0",
     "firebase-functions": "^3.3.0",
     "@google-cloud/text-to-speech": "^2.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-google": "^0.14.0"
   },
   "engines": {
     "node": "10"
