--- a/public/package.json
+++ b/public/package.json
@@ -7,9 +7,6 @@
   "directories": {
     "lib": "lib"
   },
-  "dependencies": {
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "web-animations-js": "^2.3.1"
-  },
+  "dependencies": {},
   "author": "Google"
 }
