Refactor logic to Typescript
Change-Id: Ief0d79a41922e64cee0b70dbe8826e920db00112

--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
   "scripts": {
     "deploy": "firebase deploy --only functions",
     "start": "npm run cp-3p && webpack-dev-server --open && webpack --mode development --env.development --config webpack.config.js",
-    "build": "npm run cp-3p && webpack --mode production --env.production --config webpack.config.js",
+    "build": "npm run cp-3p && npm run build:src && npm run build:web",
+    "build:src": "tsc && cp -r src/scss ./dist && cp src/sound-library.json ./dist",
+    "build:web": "webpack --mode production --env.production --config webpack.config.js",
     "cp-3p": "cp third_party/scss/*.scss src/scss/base/ && mkdir -p public/js/ && cp third_party/js/*.js public/js/",
     "lint": "eslint ./src"
   },
   "dependencies": {
-    "@polymer/app-layout": "^3.0.0-pre.21",
-    "@polymer/iron-icons": "^3.0.0-pre.21",
-    "@polymer/paper-button": "^3.0.0-pre.21",
-    "@polymer/paper-card": "^3.0.0-pre.21",
-    "@polymer/paper-dialog": "^3.0.0-pre.21",
+    "@polymer/app-layout": "^3.1.0",
+    "@polymer/iron-icons": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-card": "^3.0.1",
+    "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dropdown-menu": "^3.0.1",
-    "@polymer/paper-icon-button": "^3.0.0-pre.21",
-    "@polymer/paper-item": "^3.0.0-pre.21",
-    "@polymer/paper-listbox": "^3.0.0-pre.21",
+    "@polymer/paper-icon-button": "^3.0.2",
+    "@polymer/paper-input": "^3.2.1",
+    "@polymer/paper-item": "^3.0.1",
+    "@polymer/paper-listbox": "^3.0.1",
     "@polymer/paper-slider": "^3.0.1",
-    "@polymer/paper-toast": "^3.0.0-pre.21",
-    "@polymer/paper-toolbar": "^3.0.0-pre.25",
-    "@polymer/polymer": "^3.0.0",
+    "@polymer/paper-toast": "^3.0.1",
+    "@polymer/paper-toolbar": "^3.0.1",
+    "@polymer/polymer": "^3.3.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "sass": "^1.17.3",
@@ -35,14 +38,17 @@
     "eslint": "^6.7.2",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-polymer": "^0.4.0",
-    "node-sass": "^4.11.0",
-    "polymer-cli": "^1.8.0",
+    "node-sass": "^4.13.1",
+    "polymer-cli": "^1.9.11",
     "polymer-webpack-loader": "^2.0.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "wct-browser-legacy": "^1.0.0",
+    "typescript": "^3.8.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "resolutions": {
+    "form-data": "~3.0.0"
   }
 }
