--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:web": "webpack --mode production --env.production --config webpack.config.js",
     "cp-3p": "cp third_party/scss/*.scss src/scss/base/ && mkdir -p public/js/ && cp third_party/js/*.js public/js/",
     "lint": "eslint ./src --ext .ts",
-    "test": "npm run lint"
+    "test": "npm run lint && tsc --build tsconfig-testing.json && ava dist/_test/**/*.js"
   },
   "dependencies": {
     "@polymer/app-layout": "^3.1.0",
@@ -31,12 +31,14 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "sass": "^1.17.3",
+    "xml2js": "^0.4.23",
     "web-animations-js": "^2.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "ava": "^3.15.0",
     "css-loader": "^2.1.1",
     "eslint": "^7.20.0",
     "eslint-config-google": "^0.14.0",
